Fix Vercel serverless deployment with minimal dependencies
- Add api/requirements.txt with minimal deps for serverless
- Add diagnostic error reporting in api/index.py
- Make heavy routers (clusters, analytics, jobs) conditional on VERCEL env
- Skip Celery/ML-dependent features in serverless mode

API now works on Vercel with database connection to Neon PostgreSQL.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,9 @@ authors = [
 ]
 license = { text = "MIT" }
 dependencies = [
+    "alembic>=1.17.2",
     "httpx>=0.28.1",
+    "pgvector>=0.4.2",
 ]
 
 [tool.uv.workspace]
