Fix Railway start command for PORT variable

--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 dockerfilePath = "infra/Dockerfile.api"
 
 [deploy]
-startCommand = "uv run uvicorn apps.api.app.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "sh -c 'uv run uvicorn apps.api.app.main:app --host 0.0.0.0 --port ${PORT:-8000}'"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
