Add security tests and update docs with auth requirements
- Add 12 tests for escape_like_pattern, CacheMetrics, fail-closed mode
- Update API_SPEC.md with current X-API-Key authentication
- Update ARCHITECTURE.md with Feb 2026 security hardening details
- Fix README curl examples to include API key header
- Add .claude/tsc-cache to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,9 @@ alembic.ini
 #Ignore vscode AI rules
 .github/instructions/codacy.instructions.md
 .vercel
+
+# Specter knowledge graph cache
+.specter/
+
+# Claude Code TypeScript cache
+.claude/tsc-cache/
